<resources>
    <string name="app_name">WallpaperChanger</string>

    <string-array name="colors">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Cyan</item>
        <item>Magenta</item>
    </string-array>

    <string name="change">change</string>
    <string name="paint_mode">paint mode</string>
    <string name="solid_colors">solid colors</string>

    <string name="draw_pen">pen</string>
    <string name="draw_eraser">eraser</string>
    <string name="draw_bucket">bucket</string>
</resources>